typescript/checker/tests/conformance/types/any/assignAnyToEveryType.ts.stderr
error: NotVariable {
    span: Span {
        lo: BytePos(
            413,
        ),
        hi: BytePos(
            414,
        ),
        ctxt: #0,
    },
    left: Span {
        lo: BytePos(
            413,
        ),
        hi: BytePos(
            414,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/types/any/assignAnyToEveryType.ts:41:1
   |
41 | M = x;
   | ^

